methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:20: error: Unmatched closing brace '}' ignored here
}
^